refactor: FQN -> imports across main source (-886)
1,105 inline java./javax. qualifiers collapsed behind 269 imports in
41 files, collision-checked (two-packages-one-name, conflicting
imports, nested shadows: zero found). String literals and comments
untouched via a per-line quote mask.

Prediction miss worth keeping: estimated -4,000..-5,000 by scaling
LL's -582/140 sites linearly; actual -886. GP's qualifiers are
shorter (java.awt.) and the 269 new import lines cost ~1,600 back.
Same lesson as the tooltip kit: net the overhead.

216,994 -> 216,108. 792 tests + render gate green.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>